--- a/temario.html
+++ b/temario.html
@@ -188,7 +188,9 @@
       <section class="section section-lg bg-default text-center">
         <div class="container">
           <h2 class="wow fadeIn">TEMARIO APLICACIONES MULTIMEDIA</h2>
-          <h2 class="wow fadeIn">UNIDAD I</h2>
+          <BR>
+          <BR>
+          <h2 class="wow fadeIn">REALILDAD VIRTUAL Y VIDEOJUEGOS</h2>
           <div class="row row-30 row-md-50 row-xl-70">
             <div class="col-sm-6 col-lg-4 wow fadeIn">
           
