--- a/No.3.3.html
+++ b/No.3.3.html
@@ -297,17 +297,17 @@
                 <li>
                   <h1 class="h1fixed"></h1>
                   <p>
-                    •	Diseño visual:
+                   <h5> •	Diseño visual:</h5>
                       Elegir colores, tipografías y estilos que complementen la aplicación y faciliten la lectura y comprensión de la información.
-                    •	Jerarquía visual:
+                   <h5> •	Jerarquía visual:</h5>
                       Organizar los elementos de la interfaz de manera que el usuario pueda identificar fácilmente las funciones principales y secundarias.
-                    •	Diseño de iconos y botones:
+                   <h5> •	Diseño de iconos y botones:</h5>
                       Crear elementos visuales que sean reconocibles y que transmitan claramente la función que realizan.
-                    •	Flujo de navegación:
+                   <h5> •	Flujo de navegación:</h5>
                       Diseñar la forma en que el usuario puede moverse a través de la aplicación, asegurando que sea intuitiva y fácil de entender.
-                    •	Adaptación a diferentes dispositivos:
+                   <h5> •	Adaptación a diferentes dispositivos:</h5>
                       Asegurar que la interfaz se vea bien y funcione correctamente en diferentes dispositivos, como smartphones, tablets y computadoras.
-                    •	Consideración de la usabilidad:
+                   <h5> •	Consideración de la usabilidad:</h5>
                       Diseñar la interfaz pensando en las necesidades del usuario y buscando la simplicidad y la facilidad de uso. 
 
                     
