--- a/No.3.3.html
+++ b/No.3.3.html
@@ -215,6 +215,24 @@
                        inámica (dependiendo de la velocidad de transmisión); 
                        contenidos dentro de una cadena mediática de información;
                        a lo que hoy le sumamos la participación interactiva.
+                     Herramientas y software para el modelado de GUI:
+                     <br>
+Existen diversas herramientas y software que permiten diseñar y prototipar interfaces gráficas, algunas de ellas son: 
+<br>
+<h5>•	Figma:</h5>
+Es una herramienta de diseño colaborativo que se utiliza para crear interfaces de usuario 
+en línea, permitiendo la creación de prototipos interactivas y la colaboración en tiempo real.
+<h5>•	Adobe:</h5>
+Es una herramienta de diseño de interfaces que se utiliza para crear prototipos interactivas 
+                     y que permite la creación de interfaces para diferentes plataformas, 
+                     como aplicaciones web y móviles.
+<h5>•	Sketch:</h5>
+Es una herramienta de diseño vectorial que se utiliza para crear interfaces de usuario, 
+                     especialmente para aplicaciones de iOS y macOS.
+<h5>•	InVision:</h5>
+Es una plataforma de colaboración y prototipado que permite a los diseñadores compartir
+                     sus prototipos con otros miembros del equipo y realizar pruebas de usabilidad.
+
                   </p>
                 </li>
                 <li> 
