--- a/No.3.3.3.html
+++ b/No.3.3.3.html
@@ -96,8 +96,8 @@
         </div>
         
               <div class="titulo-fijo" id="tituloFijo">
-                Carcteristicas de desarrollo.
-            </div>
+              Integración del modelado      
+              </div>
               <style>
 
                 /* Barra de navegación fija en la parte superior */
@@ -153,7 +153,7 @@
       </header>
       <br>
       <br>
-      <div class="container"><h4>1.3.1 Carcteristicas de desarrollo.</h4></div>
+      <div class="container"><h4>3.3.3 Integración del modelado.</h4></div>
       <!-- Base de imagenes lateral derecha -->
         <div class="container">
           <div class="row row-50 flex-lg-row-reverse">
@@ -177,16 +177,24 @@
                 <li>
                   <h1 class="h1fixed"></h1>
                   <p>
-                    Las aplicaciones multimedia en la educación han revolucionado la forma en que se imparte y se recibe el conocimiento. Algunos ejemplos incluyen:
-Plataformas de aprendizaje en línea: Como Coursera, Khan Academy y Udemy, que ofrecen cursos interactivos con videos, quizzes y foros de discusión.
-Software educativo: Programas como Duolingo para aprender idiomas o GeoGebra para matemáticas.
-Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios interactivos para facilitar el aprendizaje.
+                    El modelado de una aplicación informática consiste en documentar con precisión el comportamiento que 
+                    debe tener la aplicación informática. Esto es, escrutar lo que tiene en mente el cliente y plasmarlo en un documento.
+                    <br><br>
+                    Se trata de obtener un modelo de decisión partiendo del concepto de utilidad-riesgo que conduce a 
+                    una formulación que permite el uso de la teoría de juegos de estrategia para la asignación del beneficio
+                    de la integración. La parte final incluye algunas aplicaciones importantes en el Campo Actuarial.
+                    <br><br>
+                    <h5>¿Para qué sirve hacer el modelado de una aplicación?</h5>
+                    El modelado de una aplicación sirve para reducir la distancia entre lo que tiene en mente el que 
+                    encarga la aplicación, vamos a llamarle “cliente” para simplificar, y lo que se entrega como versión 
+                    “decente” de la aplicación. 
+                    <br><br>
+                    La integración del modelado en aplicaciones multimedia se refiere a la combinación de técnicas 
+                    de modelado (como modelado 3D, animaciones, etc.) con otros elementos multimedia (como audio, video, imágenes) 
+                    para crear experiencias interactivas y visualmente ricas. Este proceso implica la creación de modelos 
+                    virtuales que luego se integran en una aplicación multimedia, permitiendo su visualización, manipulación 
+                    y animación dentro del entorno multimedia. 
 
-                  <p>
-                </li>
-                <li> 
-                  <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
-                <p>
                 </li>
               </ul>
             </div>
@@ -203,8 +211,21 @@ Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios
                 <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/eduacion2.jpg" alt="" width="340" height="250"/>
                 </div>
                 <div class="col-md-6">
-                  <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
-                </p> 
+                  <p>
+                    El proceso de integración del modelado en aplicaciones multimedia incluye los siguientes pasos:
+                    <br><br>
+                      <h5>	1. Modelado:</h5>
+                      Se crea el modelo 3D o la animación utilizando software especializado. 
+                      <h5>	2. Integración:</h5>
+                      El modelo se importa a un motor de juego, software de edición de video o plataforma de desarrollo de aplicaciones multimedia. 
+                      <h5>	3. Integración con otros medios:</h5>
+                      Se combinan los modelos 3D con audio, video, texto, efectos especiales, etc., para crear una experiencia multimedia completa. 
+                      <h5>	4. Interacción:</h5>
+                      Se agrega la posibilidad de que el usuario interactúe con los modelos 3D, como rotarlos, manipularlos o interactuar con ellos a través de la interfaz de usuario. 
+                      <h5>	5. Desarrollo de la aplicación:</h5>
+                      Se desarrolla la aplicación multimedia, incluyendo la lógica de la interacción, la interfaz de usuario y la presentación de los elementos multimedia. 
+
+                  </p>
                 </div>
               </div>
             </div>
