--- a/No.3.3.3.html
+++ b/No.3.3.3.html
@@ -250,6 +250,7 @@
       </section>
     </div>
 -->
+      </section>
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
