--- a/No.1.1.html
+++ b/No.1.1.html
@@ -228,7 +228,11 @@
             </div>
           </div>
         </div>
-      
+       <div class="nav-buttons">
+      <!--<a href="No.2.1.4.html"><button class="nav-btn">← Tema anterior</button></a>-->
+      <a href="temario.html"><button class="nav-btn">📘 Temario</button></a>
+      <a href="No.1.1.1.html"><button class="nav-btn" >Tema siguiente →</button></a>
+       </div>
     </div>
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
