--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="acercade.html">ACERCA DE</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">ACERCA DE</a>
                     </li>
                   </ul>
                 </div>
