nav entre paginas

--- a/No.1.3.1.html
+++ b/No.1.3.1.html
@@ -194,46 +194,53 @@ Libros electrónicos interactivos: Que incluyen videos, animaciones y ejercicios
         </div>
       </section> 
       <!--contenido con imagen lateral izquierdo -->
-      <section class="section section-lg bg-default">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 col-xl-8">
-              
-              <div class="row row-30">
-                <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/eduacion2.jpg" alt="" width="340" height="250"/>
-                </div>
-                <div class="col-md-6">
-                  <p>En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo. 
-                </p> 
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <!--Texto lateral derecho de videoreproductor 
-      <section class="section section-lg bg-default">
-        <div class="container">
-          <div class="row row-50 justify-content-center justify-content-xl-between flex-lg-row-reverse">
-            <div class="col-md-11 col-lg-6 col-xl-5">
-              <div class="box-1">
-                <h2></h2>
-                <p>Las aplicaciones multimedia en la educación son recursos que combinan texto, imágenes, audio, video y animación para enseñar y aprender. Estas aplicaciones pueden ayudar a los estudiantes a desarrollar habilidades digitales, como la creatividad, el pensamiento crítico y la resolución de problemas. </p>
-              </div>
-            </div>
-            video incrustado
-            <div class="col-md-11 col-lg-6">
-              <div class="thumbnail-media" style="background-image: url(images/TIPOS1.jpg);"><a class="icon thumbnail-media-icon mdi mdi-play-circle-outline" href="https://www.youtube.com/watch?v=4AjHxqt2WjM" data-lightgallery="item"></a></div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
--->
-    <div class="snackbars" id="form-output-global"></div>
-    <script src="js/core.min.js"></script>
-    <script src="js/script.js"></script>
+        <section class="section section-lg bg-default">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-xl-8">
 
-  </body>
+                        <div class="row row-30">
+                            <div class="col-md-6">
+                                <img class="imagen-zoom-rotar" src="images/eduacion2.jpg" alt="" width="340" height="250" />
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                    En la educación: La multimedia en la educación facilita el aprendizaje interactivo y atractivo. Por ejemplo, el uso de aplicaciones educativas móviles permite a los estudiantes acceder a contenido interactivo en cualquier momento y lugar, promoviendo el aprendizaje ubicuo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="nav-buttons">
+                <a href="No.1.3.html"><button class="nav-btn">← Tema anterior</button></a>
+                <a href="temario.html"><button class="nav-btn">📘 Temario</button></a>
+                <a href="No.1.3.2.html"><button class="nav-btn">Tema siguiente →</button></a>
+            </div>
+            <!--Texto lateral derecho de videoreproductor
+          <section class="section section-lg bg-default">
+            <div class="container">
+              <div class="row row-50 justify-content-center justify-content-xl-between flex-lg-row-reverse">
+                <div class="col-md-11 col-lg-6 col-xl-5">
+                  <div class="box-1">
+                    <h2></h2>
+                    <p>Las aplicaciones multimedia en la educación son recursos que combinan texto, imágenes, audio, video y animación para enseñar y aprender. Estas aplicaciones pueden ayudar a los estudiantes a desarrollar habilidades digitales, como la creatividad, el pensamiento crítico y la resolución de problemas. </p>
+                  </div>
+                </div>
+                video incrustado
+                <div class="col-md-11 col-lg-6">
+                  <div class="thumbnail-media" style="background-image: url(images/TIPOS1.jpg);"><a class="icon thumbnail-media-icon mdi mdi-play-circle-outline" href="https://www.youtube.com/watch?v=4AjHxqt2WjM" data-lightgallery="item"></a></div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+    -->
+            <div class="snackbars" id="form-output-global"></div>
+            <script src="js/core.min.js"></script>
+            <script src="js/script.js"></script>
+
+</body>
   <style>
      /*Derechos de autos*/
     .footer {
