--- a/No.3.3.3.html
+++ b/No.3.3.3.html
@@ -202,55 +202,61 @@
         </div>
       </section> 
       <!--contenido con imagen lateral izquierdo -->
-      <section class="section section-lg bg-default">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 col-xl-8">
-              
-              <div class="row row-30">
-                <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/eduacion2.jpg" alt="" width="340" height="250"/>
-                </div>
-                <div class="col-md-6">
-                  <p>
-                    El proceso de integración del modelado en aplicaciones multimedia incluye los siguientes pasos:
-                    <br><br>
-                      <h5>	1. Modelado:</h5>
-                      Se crea el modelo 3D o la animación utilizando software especializado. 
-                      <h5>	2. Integración:</h5>
-                      El modelo se importa a un motor de juego, software de edición de video o plataforma de desarrollo de aplicaciones multimedia. 
-                      <h5>	3. Integración con otros medios:</h5>
-                      Se combinan los modelos 3D con audio, video, texto, efectos especiales, etc., para crear una experiencia multimedia completa. 
-                      <h5>	4. Interacción:</h5>
-                      Se agrega la posibilidad de que el usuario interactúe con los modelos 3D, como rotarlos, manipularlos o interactuar con ellos a través de la interfaz de usuario. 
-                      <h5>	5. Desarrollo de la aplicación:</h5>
-                      Se desarrolla la aplicación multimedia, incluyendo la lógica de la interacción, la interfaz de usuario y la presentación de los elementos multimedia. 
+        <section class="section section-lg bg-default">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-xl-8">
 
-                  </p>
+                        <div class="row row-30">
+                            <div class="col-md-6">
+                                <img class="imagen-zoom-rotar" src="images/eduacion2.jpg" alt="" width="340" height="250" />
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                    El proceso de integración del modelado en aplicaciones multimedia incluye los siguientes pasos:
+                                    <br><br>
+                                    <h5>	1. Modelado:</h5>
+                                    Se crea el modelo 3D o la animación utilizando software especializado.
+                                    <h5>	2. Integración:</h5>
+                                    El modelo se importa a un motor de juego, software de edición de video o plataforma de desarrollo de aplicaciones multimedia.
+                                    <h5>	3. Integración con otros medios:</h5>
+                                    Se combinan los modelos 3D con audio, video, texto, efectos especiales, etc., para crear una experiencia multimedia completa.
+                                    <h5>	4. Interacción:</h5>
+                                    Se agrega la posibilidad de que el usuario interactúe con los modelos 3D, como rotarlos, manipularlos o interactuar con ellos a través de la interfaz de usuario.
+                                    <h5>	5. Desarrollo de la aplicación:</h5>
+                                    Se desarrolla la aplicación multimedia, incluyendo la lógica de la interacción, la interfaz de usuario y la presentación de los elementos multimedia.
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="nav-buttons">
+                <a href="No.3.3.2.html"><button class="nav-btn">← Tema anterior</button></a>
+                <a href="temario.html"><button class="nav-btn">📘 Temario</button></a>
+                <a href="No.3.4.html"><button class="nav-btn">Tema siguiente →</button></a>
+            </div>
+            <!--Texto lateral derecho de videoreproductor
+          <section class="section section-lg bg-default">
+            <div class="container">
+              <div class="row row-50 justify-content-center justify-content-xl-between flex-lg-row-reverse">
+                <div class="col-md-11 col-lg-6 col-xl-5">
+                  <div class="box-1">
+                    <h2></h2>
+                    <p>Las aplicaciones multimedia en la educación son recursos que combinan texto, imágenes, audio, video y animación para enseñar y aprender. Estas aplicaciones pueden ayudar a los estudiantes a desarrollar habilidades digitales, como la creatividad, el pensamiento crítico y la resolución de problemas. </p>
+                  </div>
+                </div>
+                video incrustado
+                <div class="col-md-11 col-lg-6">
+                  <div class="thumbnail-media" style="background-image: url(images/TIPOS1.jpg);"><a class="icon thumbnail-media-icon mdi mdi-play-circle-outline" href="https://www.youtube.com/watch?v=4AjHxqt2WjM" data-lightgallery="item"></a></div>
                 </div>
               </div>
             </div>
-          </div>
+          </section>
         </div>
-      <!--Texto lateral derecho de videoreproductor 
-      <section class="section section-lg bg-default">
-        <div class="container">
-          <div class="row row-50 justify-content-center justify-content-xl-between flex-lg-row-reverse">
-            <div class="col-md-11 col-lg-6 col-xl-5">
-              <div class="box-1">
-                <h2></h2>
-                <p>Las aplicaciones multimedia en la educación son recursos que combinan texto, imágenes, audio, video y animación para enseñar y aprender. Estas aplicaciones pueden ayudar a los estudiantes a desarrollar habilidades digitales, como la creatividad, el pensamiento crítico y la resolución de problemas. </p>
-              </div>
-            </div>
-            video incrustado
-            <div class="col-md-11 col-lg-6">
-              <div class="thumbnail-media" style="background-image: url(images/TIPOS1.jpg);"><a class="icon thumbnail-media-icon mdi mdi-play-circle-outline" href="https://www.youtube.com/watch?v=4AjHxqt2WjM" data-lightgallery="item"></a></div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
--->
-      </section>
+    -->
+        </section>
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
