--- a/temarioprueba.html
+++ b/temarioprueba.html
@@ -46,6 +46,8 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
                     </li>
+                     <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">ACERCA DE</a>
+                    </li>
                   </ul>
                 </div>
               </div>
