--- a/noticias.html
+++ b/noticias.html
@@ -244,6 +244,170 @@
     .footer a:hover {
         text-decoration: underline;
     }
+    *{
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
+}
+/* Tipografia y colores de base*/
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: #f0f8ff;
+    /* Azul muy claro*/
+    color: #333;
+}
+/* Encabezado*/
+header{
+    background-color: #2c3e50; /*Tomate*/
+    color: #fff;
+    padding: 20px 0;
+}
+header .logo{
+    text-align: center;
+    margin-bottom: 10px;
+}
+header nav ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+header nav ul li{
+    margin: 0 15px;
+}
+header nav ul li a{
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+header nav ul li a:hover{
+    color: #ffd700; /*Dorado*/
+}
+#noticias{
+    padding: 40px 20px;
+    background-color: #ffffff;/*Melocoton claro*/
+}
+#noticias h2{
+    text-align: center;
+    margin-bottom: 30px;
+    color:#306406; /* Naranja Rojizo */
+}
+.noticias-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.noticia{
+    background-color: #e8f5f8;
+    border: 2px solid #306406;
+    border-radius: 10px;
+    width: 300px;
+    padding: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.noticia:hover{
+    transform: scale(1.05);
+}
+.noticia img{
+    width: 100%;
+    border-radius: 5px;
+}
+.noticia h3{
+    margin: 15px 0 10px;
+    color: #ff6347;
+}
+.noticia p{
+    font-size: 0.95em;
+    margin-bottom: 10px;
+}
+.noticia a{
+    text-decoration: none;
+    color: #fff;
+    background-color: #ff6347;
+    padding: 8px 12px;
+    border-radius: 5px; 
+    transition: background-color 0.3s;
+}
+.noticia a:hover{
+    background-color: #ff4500;
+}
+/* Seccion de Foros*/
+#foros{
+    padding: 40px 20px;
+    background-color: #fafad2;
+}
+#foros h2{
+    text-align: center;
+    margin-bottom: wrap;
+    justify-content: #daa520; /*Dorado oscuro*/
+}
+.foros-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.foro{
+    background-color: #fff;
+    border: 2px solid#daa520;
+    border-radius: 10px;
+    width: 300px;
+    padding: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s;
+}
+.foro:hover{
+    transform: scale(1.05);
+}
+.foro h3{
+    margin-bottom: 10px;
+    color:#ff8c00; /*Naranja oscuro*/
+}
+.foro p{
+    font-size: 0.95em;
+    margin-bottom: 15px;
+}
+.foro a{
+    text-decoration: none;
+    color: #fff;
+    background-color: #ff8c00;
+    padding: 8px 12px ;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.foro a:hover{
+    background-color: #ff7f50;
+}
+/*Galeria de Fotos*/
+#galeria{
+    padding: 40px 20px;
+    background-color: #e6e6fa; /*Lavanda*/
+}
+#galeria h2{
+    text-align: center;
+    margin-bottom: 30px;
+    color:#6a5acd;/*Azul medio*/
+}
+.galeria-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+}
+.galeria-container img{
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    border: 3px solid#6a5acd;
+    border-radius: 10px;
+    transition: transform 0.3s, border-color 0.3s;
+}
+.galeria-containerimg:hover{
+    transform: scale(1.1);
+    border-color: #483d8b; /*Azul oscuro*/
+}
 </style>
 
 <footer class="footer">
