--- a/integrantes.html
+++ b/integrantes.html
@@ -82,7 +82,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="temario.html">CONTENIDO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">NOTICIAS</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
                     </li>
