--- a/temario.html
+++ b/temario.html
@@ -117,7 +117,7 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">INICIO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="temario.html">CONTENIDO</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                     </li>
