--- a/No.3.1.html
+++ b/No.3.1.html
@@ -94,7 +94,7 @@ transform-style: preserve-3d;}
                                         <a class="rd-nav-link" href="index.html">INICIO</a>
                                     </li>
                                     <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="temario.html">CONTENIDO</a>
+                                        <a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                                     </li>
                                     <li class="rd-nav-item">
                                         <a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
