--- a/No.3.2.3.html
+++ b/No.3.2.3.html
@@ -87,10 +87,10 @@
                                         <a class="rd-nav-link" href="index.html">INICIO</a>
                                     </li>
                                     <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="temario.html">CONTENIDO</a>
+                                        <a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                                     </li>
                                     <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="index.html">NOTICIAS</a>
+                                        <a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                                     </li>
                                     <li class="rd-nav-item">
                                         <a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
