--- a/No.3.3.3.html
+++ b/No.3.3.3.html
@@ -80,9 +80,9 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">INICIO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="temario.html">CONTENIDO</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">NOTICIAS</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
                     </li>
