--- a/temarioprueba.html
+++ b/temarioprueba.html
@@ -39,9 +39,9 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">INICIO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="temario2.html">TEMARIO</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">TEMARIO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="temario.html">NOTICIAS</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="integrantes.html">INTEGRANTES</a>
                     </li>
