--- a/index.html
+++ b/index.html
@@ -375,6 +375,9 @@
     .footer a:hover {
         text-decoration: underline;
     }
+    .footer p{
+        line-height: 80%;
+    }
 </style>
 
 <footer class="footer">
