--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         text-align: center;
         font-size: 10px;
         border-radius: 10px; /* Bordes redondeados */
-        margin: 10px; /* Separación del contenido */
+        /*margin: 10px;  Separación del contenido */
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
     }
     .footer a {
@@ -376,7 +376,7 @@
         text-decoration: underline;
     }
     .footer p{
-        line-height: 50%;
+        line-height: 20%;
     }
 </style>
 
