--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         text-decoration: underline;
     }
     .footer p{
-        line-height: .8;
+        line-height: 0.8;
     }
 </style>
 
