--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
+    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.
     Este sitio web y su contenido son propiedad del Instituto Político Nacional. <br>
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
