--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
 
 <footer class="footer">
     <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional. <br>
+    Este sitio web y su contenido son propiedad del Instituto Político Nacional. 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
-    sin autorización previa por escrito.<br>
-    Sitio web desarrollado por la Universidad UPIICSA.<br>
+    sin autorización previa por escrito.
+    Sitio web desarrollado por la Universidad UPIICSA.
     Para consultas o permisos de uso, contáctenos en 
     <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
 </footer>
