--- a/index.html
+++ b/index.html
@@ -375,17 +375,17 @@
     .footer a:hover {
         text-decoration: underline;
     }
-    .footer p{
+    .footer {
         line-height: 1;
     }
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional. 
+    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
-    sin autorización previa por escrito.
-    Sitio web desarrollado por la Universidad UPIICSA.
+    sin autorización previa por escrito.<br>
+    Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
     <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
 </footer>
