--- a/temarioprueba.html
+++ b/temarioprueba.html
@@ -386,6 +386,7 @@
           
         </section>
         <br>
+        <style>
     .footer {
         background-color: #2c3e50; /* Color de fondo oscuro */
         color: white; /* Texto en color blanco */
