--- a/integrantes.html
+++ b/integrantes.html
@@ -203,6 +203,7 @@
         border-radius: 10px; /* Bordes redondeados */
         margin: 20px; /* Separación del contenido */
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+        line-height: 1; /*Interlineado*/
     }
     .footer a {
         color: #1abc9c; /* Color llamativo para enlaces */
@@ -215,12 +216,12 @@
     /*Derechos de autos*/
 </style>
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.</p>
-    <p>Este sitio web y su contenido son propiedad del Instituto Político Nacional. 
+    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
-    sin autorización previa por escrito.</p>
-    <p>Sitio web desarrollado por la Universidad UPIICSA.</p>
-    <p>Para consultas o permisos de uso, contáctenos en 
+    sin autorización previa por escrito.<br>
+    Sitio web desarrollado por la Universidad UPIICSA.<br>
+    Para consultas o permisos de uso, contáctenos en 
     <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
 </footer>
 </html>
