--- a/No.1.1.2.html
+++ b/No.1.1.2.html
@@ -299,7 +299,7 @@
         </div>
         <div class="nav-buttons">
             <a href="No.1.1.1.html"><button class="nav-btn">← Tema anterior</button></a>
-            <a href="temario.html"><button class="nav-btn">📘 Temario</button></a>
+            <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
             <a href="No.1.1.3.html"><button class="nav-btn">Tema siguiente →</button></a>
         </div>
 
