--- a/No.1.1.2.html
+++ b/No.1.1.2.html
@@ -187,7 +187,7 @@
                                 la forma en que las empresas se comunican, operan y comercializan sus productos y servicios. La integración
                                 de tecnologías multimedia en los negocios no solo ha optimizado la productividad, sino que también ha mejorado
                                 la experiencia del cliente y ha permitido estrategias de marketing más efectivas. En este ensayo, se analizarán los
-                                distintos tipos de aplicaciones multimedia en los negocios, sus beneficios y los desafíos que presentan
+                                distintos tipos de aplicaciones multimedia en los negocios, sus beneficios y los desafíos que presentan.
                                 <br>
                                 En el sector empresarial, las aplicaciones multimedia se utilizan para presentaciones corporativas, formación de
                                 empleados y marketing digital. Estas herramientas permiten comunicar información de manera efectiva y atractiva,
@@ -217,7 +217,6 @@
                             <p><img class="imagen-zoom-rotar" src="images/Nego3.jpg" alt="" width="340" height="250" /></p>
                         </div>
                         <div class="col-md-6">
-
                             <p>
                                 Otro ámbito clave es la comunicación empresarial y la colaboración remota. Con el auge del teletrabajo
                                 y la globalización, las herramientas multimedia han facilitado la interacción entre equipos de trabajo
@@ -267,9 +266,7 @@
                                 Aplicaciones como Trello, Asana y Monday.com utilizan interfaces gráficas interactivas para facilitar la coordinación de tareas,
                                 el seguimiento de avances y la comunicación entre equipos. Estas plataformas no solo mejoran la eficiencia operativa, sino que
                                 también permiten una mayor transparencia y control sobre los proyectos empresariales.
-                            </p>
-                       
-                            <p>
+                    
                                 Sin embargo, a pesar de sus numerosos beneficios, la implementación de aplicaciones multimedia en los negocios enfrenta ciertos
                                 desafíos. La inversión en tecnología y capacitación puede representar un obstáculo para algunas empresas, especialmente para las
                                 pequeñas y medianas. Además, la seguridad y privacidad de los datos se han convertido en una preocupación creciente, ya que la
