--- a/No.1.1.1.html
+++ b/No.1.1.1.html
@@ -15,6 +15,9 @@
   
   <body>
     <style>
+      body{
+        background: lightblue("fondopagina.jpg")no-repeat fixed center;
+      }
       @keyframes mover {
           0% { transform: translateX(0); }
           50% { transform: translateX(20px); } /* Se mueve a la derecha */
