--- a/No.1.1.1.html
+++ b/No.1.1.1.html
@@ -17,6 +17,7 @@
     <style>
       body{
         background: url("fonfo.jpg");
+        min-height:500px;
       }
       @keyframes mover {
           0% { transform: translateX(0); }
