--- a/No.1.1.1.html
+++ b/No.1.1.1.html
@@ -17,7 +17,7 @@
     <style>
       body{
         background: url("fonfo.jpg");
-        width:100%;
+        width:1200px;
       }
       @keyframes mover {
           0% { transform: translateX(0); }
