--- a/No.1.1.5.html
+++ b/No.1.1.5.html
@@ -189,10 +189,10 @@
                                 es parte del día a día, las aplicaciones multimedia no solo han cambiado la forma en que consumimos contenido, sino también
                                 la manera en que participamos en el proceso de entretenimiento. En esta investigación, se analizarán los principales tipos de
                                 aplicaciones multimedia en el entretenimiento, sus beneficios y los desafíos que presentan.
-                                
+                                <p>
                                 En el ámbito del entretenimiento, las aplicaciones multimedia son fundamentales en la producción de videojuegos, películas
                                 interactivas y experiencias de realidad virtual y aumentada. Estas tecnologías ofrecen experiencias inmersivas y atractivas,
-                                ampliando las posibilidades creativas y la participación del público.
+                                ampliando las posibilidades creativas y la participación del público.</p>
                            
 
                                 Uno de los sectores más beneficiados por las aplicaciones multimedia es la industria del cine y el streaming. Plataformas
