--- a/No.1.1.5.html
+++ b/No.1.1.5.html
@@ -188,19 +188,17 @@
                                 revolucionando industrias como el cine, la música, los videojuegos y las redes sociales. En un mundo donde la digitalización
                                 es parte del día a día, las aplicaciones multimedia no solo han cambiado la forma en que consumimos contenido, sino también
                                 la manera en que participamos en el proceso de entretenimiento. En esta investigación, se analizarán los principales tipos de
-                                aplicaciones multimedia en el entretenimiento, sus beneficios y los desafíos que presentan.
+                                aplicaciones multimedia en el entretenimiento, sus beneficios y los desafíos que presentan. </p>
                                 <p>
                                 En el ámbito del entretenimiento, las aplicaciones multimedia son fundamentales en la producción de videojuegos, películas
                                 interactivas y experiencias de realidad virtual y aumentada. Estas tecnologías ofrecen experiencias inmersivas y atractivas,
                                 ampliando las posibilidades creativas y la participación del público.</p>
-                           
-
+                                <p>
                                 Uno de los sectores más beneficiados por las aplicaciones multimedia es la industria del cine y el streaming. Plataformas
                                 como Netflix, Disney+, Amazon Prime Video y HBO Max han revolucionado la distribución de contenido audiovisual, permitiendo
                                 a los usuarios acceder a una vasta biblioteca de películas y series en cualquier momento y lugar. Además, la integración de
                                 inteligencia artificial y algoritmos de recomendación ha permitido personalizar la experiencia del espectador, sugiriendo
-                                contenido basado en sus preferencias.
-                            </p>
+                                contenido basado en sus preferencias.</p>
                         </li>
                     </ul>
                 </div>
