--- a/No.1.1.5.html
+++ b/No.1.1.5.html
@@ -216,8 +216,7 @@
                             <p><img class="imagen-zoom-rotar" src="images/entretenimiento3.avif" alt="" width="340" height="250" /></p>
                         </div>
                         <div class="col-md-6">
-                            <br>
-                            <br>
+                         
 
                             <p>
                                 Otro campo de gran impacto es la industria musical, donde las aplicaciones multimedia han transformado
@@ -226,9 +225,6 @@
                                 herramientas de edición de audio como FL Studio, Pro Tools y GarageBand han permitido a artistas y
                                 productores crear música de alta calidad sin la necesidad de estudios de grabación tradicionales.
                             </p>
-                            <br>
-                            <br>
-                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -263,9 +259,7 @@
                                 Plataformas como Instagram, TikTok y Snapchat han potenciado la creación y consumo de contenido
                                 visual y audiovisual, permitiendo a los usuarios compartir experiencias en tiempo real. Estas
                                 aplicaciones han cambiado la manera en que nos comunicamos, promoviendo la interacción social
-                                a través de videos cortos, filtros interactivos y transmisiones en vivo.
-                                <br>
-                                <br>
+                                a través de videos cortos, filtros interactivos y transmisiones en vivo.</p>
                             <p>
                                 A pesar de sus beneficios, las aplicaciones multimedia en el entretenimiento presentan algunos
                                 desafíos. La dependencia de la conectividad a internet puede limitar el acceso a estas plataformas
@@ -273,12 +267,6 @@
                                 fragmentación del mercado obligan a los consumidores a suscribirse a múltiples servicios para
                                 acceder a su contenido favorito. Otro reto importante es la privacidad de los usuarios, ya que
                                 muchas aplicaciones recopilan datos personales para ofrecer recomendaciones y anuncios personalizados.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-
                             </p>
                         </li>
                     </ul>
