--- a/No.1.1.html
+++ b/No.1.1.html
@@ -186,10 +186,8 @@
                   <p>
                     Las aplicaciones multimedia integran diversos formatos como texto,
                     imágenes, sonido, animaciones y video para ofrecer experiencias interactivas y enriquecedoras. A continuación, se presentan algunos tipos de aplicaciones multimedia en diferentes ámbitos. las aplicaciones multimedia desempeñan un papel crucial en diversos sectores, mejorando la comunicación, el aprendizaje y la experiencia del usuario a través de la integración de múltiples formatos y tecnologías interactivas.
-                    </p>
-                </li>
-                <li> 
-                  <p>CLas aplicaciones multimedia han revolucionado la forma en que interactuamos con la tecnología, integrando elementos como texto, imágenes, audio, video y animaciones para mejorar la comunicación y la experiencia del usuario. Dependiendo de su propósito, estas aplicaciones se utilizan en distintos ámbitos, como la educación, los negocios, el cómputo ubicuo, la autoría y el entretenimiento. En la educación, facilitan 
+                    </p>                
+                  <p>Las aplicaciones multimedia han revolucionando la forma en que interactuamos con la tecnología, integrando elementos como texto, imágenes, audio, video y animaciones para mejorar la comunicación y la experiencia del usuario. Dependiendo de su propósito, estas aplicaciones se utilizan en distintos ámbitos, como la educación, los negocios, el cómputo ubicuo, la autoría y el entretenimiento. En la educación, facilitan 
                     el aprendizaje a través de plataformas interactivas y simulaciones; en los negocios, optimizan la comunicación y el marketing digital; en el cómputo ubicuo, se integran en dispositivos inteligentes y el Internet de las Cosas; en la autoría, permiten la creación y edición de contenido digital; y en el entretenimiento, transforman la industria del cine, la música y los videojuegos. Estas aplicaciones continúan evolucionando, 
                     ofreciendo nuevas posibilidades en el mundo digital.</p>
                 </li>
@@ -207,7 +205,11 @@
                 <div class="col-md-6"><img class="imagen-zoom-rotar" src="images/IMAGEN2.jpg" alt="" width="340" height="250"/>
                 </div>
                 <div class="col-md-6">
-                  <p>Un proyecto de multimedia no tiene que ser interactivo para llamarse multimedia: los usuarios pueden reclinarse en el asiento y verlo como lo hacen en el cine o frente al televisor. En tales casos un proyecto es lineal, pues empieza y corre hasta el final, cuando se da el control de navegación a los usuarios para que exploren a voluntad el contenido, multimedia se convierte en no lineal e interactivo, y es un puente personal muy poderoso hacia la información.</p> 
+                  <p>Un proyecto de multimedia no tiene que ser interactivo para llamarse multimedia: los usuarios pueden
+                    reclinarse en el asiento y verlo como lo hacen en el cine o frente al televisor. En tales casos un proyecto
+                    es lineal, pues empieza y corre hasta el final, cuando se da el control de navegación a los usuarios para
+                    que exploren a voluntad el contenido, multimedia se convierte en no lineal e interactivo, y es un puente 
+                    personal muy poderoso hacia la información.</p> 
                 </div>
               </div>
             </div>
@@ -219,7 +221,12 @@
             <div class="col-md-11 col-lg-6 col-xl-5">
               <div class="box-1">
                 <h2>USO DE DIFERENTES MEDIOS</h2>
-                <p>El uso de los diferentes códigos o medios en la que se presenta la información debe realizarse integrándolos de forma coherentes, teniendo en cuenta la utilidad y funcionalidad de los mismos dentro del programa. Y, la inclusión de diferentes medios de comunicación -auditivo, visual- facilita el aprendizaje, adaptándose en mayor medida a los sujetos, a sus características y capacidades (pueden potenciar: memoria visual, comprensión visual, memoria auditiva, comprensión oral, etc.). </p>
+                <p>El uso de los diferentes códigos o medios en la que se presenta la información 
+                  debe realizarse integrándolos de forma coherentes, teniendo en cuenta la utilidad y 
+                  funcionalidad de los mismos dentro del programa. Y, la inclusión de diferentes medios 
+                  de comunicación -auditivo, visual- facilita el aprendizaje, adaptándose en mayor medida 
+                  a los sujetos, a sus características y capacidades (pueden potenciar: memoria visual, 
+                  comprensión visual, memoria auditiva, comprensión oral, etc.). </p>
               </div>
             </div>
             <!-- video incrustado -->
